# libyuvCompile

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lovepoem/libyuv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lovepoem/libyuv/: MainActivity.java  PreviewActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/lovepoem/libyuv/: ExampleUnitTest.java
libyuvlib/: CMakeLists.txt  build.gradle
libyuvlib/src/androidTest/java/com/gaosiedu/libyuv/: ExampleInstrumentedTest.java
libyuvlib/src/main/: AndroidManifest.xml
libyuvlib/src/main/cpp/: native-lib.cpp
libyuvlib/src/main/java/com/gaosiedu/libyuv/: Ndk.java
libyuvlib/src/main/res/values/: strings.xml
libyuvlib/src/test/java/com/gaosiedu/libyuv/: ExampleUnitTest.java
